reverse-proxy-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: reverse-proxy-deployment
 labels:
   role: app
spec:
 selector:
   matchLabels:
     role: app
 template:
   metadata:
     labels:
       role: app
   spec:
     containers:
     - name: reverse-proxy
       image: ngchanell/reverse-proxy
       ports:
            - containerPort: 80
