reverse-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
