test-service-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service-1
spec:
  selector:
    app: test-service-1
  ports:
    - name: test-service-1-port
      protocol: TCP
      port: 80
      targetPort: 8080
