test-service-deploy.yml
apiVersion: v1
kind: Service
metadata:
 name: test-service-1
spec:
 selector:
   role: app
 ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
 name: test-service-2
spec:
 selector:
   role: app
 ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: test-service-1-deployment
 labels:
   role: app
spec:
 selector:
   matchLabels:
     role: app
 template:
   metadata:
     labels:
       role: app
   spec:
     containers:
     - name: test-service-1
       image: ngchanell/test-service-1
       ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: test-service-2-deployment
 labels:
   role: app
spec:
 selector:
   matchLabels:
     role: app
 template:
   metadata:
     labels:
       role: app
   spec:
     containers:
     - name: test-service-2
       image: ngchanell/test-service-2
       ports:
            - containerPort: 8080
