reverse-proxy-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reverse-proxy-ingress
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - backend:
          serviceName: reverse-proxy
          servicePort: 80
