test-service-1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-service-1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: test-service-1
            port: 
              number: 80
        path: /
        pathType: Prefix
